--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit>=1.28.0
 groq>=0.31.0
-langchain>=0.3.27
-langchain-core>=0.3.72
-langchain-groq>=0.3.7
-langgraph>=0.6.3
-pydantic>=2.11.7
-python-dotenv>=1.1.1
+langchain==0.2.16
+langchain-core==0.2.40
+langchain-groq==0.1.9
+langgraph==0.2.28
+pydantic>=2.8.0
+python-dotenv>=1.0.0
