--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit>=1.28.0
-groq>=0.31.0
-langchain==0.2.16
-langchain-core==0.2.40
-langchain-groq==0.1.9
-langgraph==0.2.28
-pydantic>=2.8.0
+groq==0.8.0
+langchain==0.1.17  
+langchain-core==0.1.50
+langchain-groq==0.1.3
+langgraph==0.0.65
+pydantic==1.10.12
 python-dotenv>=1.0.0
